# SysOpy

1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  contactBook.c  contactBook.h  core  coredump  main.c  main_dynamic  main_shared  main_static  maincoredump.c  maindynamic.c  resultsO1.txt  resultsO3.txt  resultsOs.txt
1/Testing/Temporary/: CTestCostData.txt
1/lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  contactBook.c  contactBook.h
10/zad1/: client.c  common.h  server.c
10/zad2/: CMakeLists.txt  client.c  common.h  server.c
2/zad1/: CMakeLists.txt  bench.c  bench.h  main.c  test  wyniki.txt
2/zad2/: CMakeLists.txt  main.c
2/zad3/: main.c
3/zad1/: CMakeLists.txt  getenv.c  shell.c  test.bat
3/zad2/: CMakeLists.txt  bench.c  expensive.c  shell.c  test.bat
4/zad1/: CMakeLists.txt  main.c
4/zad2/: CMakeLists.txt  child.c  main.c
4/zad3/: main.c
4/zad_/: main.c
5/zad1/: CMakeLists.txt  shell.c
5/zad2/: CMakeLists.txt  master.c  slave.c
6/zad1/: CMakeLists.txt  client.c  common.h  server.c
6/zad2/: CMakeLists.txt  client.c  common.h  server.c
7/zad1/: CMakeLists.txt  barber.c  barber.h  clients.c
7/zad2/: CMakeLists.txt  barber.c  barber.h  clients.c
8/zad1a/: gen.c  main.c
8/zad1b/: CMakeLists.txt  main.c
8/zad1c/: gen.c  main.c
8/zad2/: main.c  zad2.raport
9/zad1a/: CMakeLists.txt  main.c  monitor.h
9/zad1b/: main.c  monitor.h
Project/: CMakeLists.txt  example.c  load.c  load.h  tracee.c  tracer.c
